--- a/index.html
+++ b/index.html
@@ -12,32 +12,83 @@
     <div
       class="container-fluid h-100 d-flex justify-content-center align-items-center"
     >
-      <div class="row col-md-8">
-        <div class="container text-center shadow rounded">
+      <div
+        class="container text-center shadow d-flex rounded align-items-center justify-content-center py-4"
+      >
+        <div class="row">
           <h1 class="pt-2">Payment Information</h1>
-          <hr />
+        </div>
 
-          <div class="col-md-12 my-5 d-flex justify-content-center">
-            <div class="form-floating col-4 me-4">
+        <!-- <div class="line-to-separate"></div> -->
+
+        <form>
+          <div class="row">
+            <div class="form-floating col-md-7">
               <input
                 type="text"
                 class="form-control"
                 id="name"
                 placeholder="John doe"
+                required
               />
               <label for="email">Name</label>
             </div>
-            <div class="form-floating col-4">
+            <div class="form-floating col-md-5">
               <input
                 type="email"
                 class="form-control"
                 id="email"
                 placeholder="name@example.com"
+                required
               />
               <label for="email">Email address</label>
             </div>
           </div>
-        </div>
+
+          <div class="row mt-3">
+            <div class="form-floating col-md-5">
+              <input
+                type="text"
+                class="form-control"
+                id="cardNumber"
+                placeholder="Card Number"
+                required
+              />
+              <label for="cardNumber">Card Number</label>
+            </div>
+
+            <div class="form-floating col-md-1">
+              <label for="">logo cartão</label>
+            </div>
+
+            <div class="form-floating col-md-2">
+              <input
+                type="text"
+                class="form-control"
+                id="CVC"
+                placeholder="CVC"
+                required
+              />
+              <label for="CVC">CVC</label>
+            </div>
+
+            <div class="form-floating col-md-4">
+              <input
+                type="date"
+                class="form-control"
+                id="expirationDate"
+                placeholder="Expiration Date"
+                required
+              />
+              <label for="expirationDate">Expiration Date</label>
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-center mt-5 mb-4">
+            <button type="submit" class="col-lg-1 btn btn-success">Save</button>
+            <button class="col-lg-1 mx-5 btn btn-danger">Cancel</button>
+          </div>
+        </form>
       </div>
     </div>
 
