Done select for due date

--- a/index.html
+++ b/index.html
@@ -87,11 +87,9 @@
           </div>
 
           <div class="row mt-3">
-            <div class="form-floating col-md-5">
-              <label for="">Due Date</label>
-              <select name="dueDate" id="dueDate">
-                <option value="" selected>5</option>
-              </select>
+            <div class="form-floating col-md-5 d-flex align-items-center">
+              <span for="">Due Date</span>
+              <select name="dueDate" id="dueDate" class="form-select-sm mx-5"></select>
             </div>
           </div>
 
