--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <!-- <div class="line-to-separate"></div> -->
 
-        <form>
+        <form id="formPaymentInformation">
           <div class="row">
             <div class="form-floating col-md-7">
               <input
@@ -74,7 +74,7 @@
               <label for="CVC">CVC</label>
             </div>
 
-            <div class="form-floating col-md-2">
+            <div class="form-floating col-md-3">
               <input
                 type="text"
                 class="form-control"
@@ -86,10 +86,45 @@
             </div>
           </div>
 
-          <div class="row mt-3">
+          <div class="row mt-4">
             <div class="form-floating col-md-5 d-flex align-items-center">
               <span for="">Due Date</span>
-              <select name="dueDate" id="dueDate" class="form-select-sm mx-5"></select>
+              <select
+                name="dueDate"
+                id="dueDate"
+                class="form-select-sm mx-5"
+              ></select>
+            </div>
+          </div>
+
+          <div class="row mt-2">
+            <div class="form-floating col-md-5">
+              <input
+                type="number"
+                class="form-control"
+                id="price"
+                placeholder="Price"
+                onkeyup="validatePrice(event), showTotalPrice()"
+                required
+              />
+              <label for="price">Price</label>
+            </div>
+            <div class="form-floating col-md-5">
+              <input
+                type="number"
+                class="form-control"
+                id="installation"
+                placeholder="Installation"
+                onkeyup="validatePrice(event), showTotalPrice()"
+                required
+              />
+              <label for="installation">Installation</label>
+            </div>
+          </div>
+
+          <div class="row mt-5">
+            <div class="col-md-10">
+              <span>TOTAL: R$ <span id="totalPrice"></span></span>
             </div>
           </div>
 
