Removed itens to show the lesson

--- a/index.html
+++ b/index.html
@@ -20,8 +20,6 @@
           <h1 class="pt-2">Payment Information</h1>
         </div>
 
-        <!-- <div class="line-to-separate"></div> -->
-
         <form id="formPaymentInformation">
           <div class="row">
             <div class="form-floating col-md-7">
@@ -104,7 +102,6 @@
                 class="form-control"
                 id="price"
                 placeholder="Price"
-                onkeyup="validatePrice(event), showTotalPrice()"
                 required
               />
               <label for="price">Price</label>
@@ -115,7 +112,6 @@
                 class="form-control"
                 id="installation"
                 placeholder="Installation"
-                onkeyup="validatePrice(event), showTotalPrice()"
                 required
               />
               <label for="installation">Installation</label>
@@ -129,11 +125,7 @@
           </div>
 
           <div class="row d-flex justify-content-center mt-5 mb-4">
-            <button
-              type="submit"
-              class="col-md-2 mb-4 btn btn-success"
-              onclick="save(event)"
-            >
+            <button type="submit" class="col-md-2 mb-4 btn btn-success">
               Save
             </button>
             <button class="col-md-2 mx-5 mb-4 btn btn-danger" type="button">
