Put h5 in total price to fix the render

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 
           <div class="row mt-5">
             <div class="col-md-10">
-              <span>TOTAL: R$ <span id="totalPrice"></span></span>
+              <span><h4> TOTAL: R$ <span id="totalPrice"></span></span> </h4>
             </div>
           </div>
 
